feat: implement high-performance optimizations and testing
- Replace Uvicorn with Granian for better throughput and lower latency
- Add database routing middleware for read/write splitting
- Implement comprehensive unit and integration tests
- Add load testing with k6
- Update Dockerfile to use uv for faster dependency installation
- Add Google Gemini integration for AI analysis

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 fastapi
-uvicorn[standard]
+granian[reload]
 sqlmodel
 asyncpg
 pydantic
@@ -10,3 +10,4 @@ httpx
 pytest
 pytest-asyncio
 greenlet
+google-generativeai
