--- a/.github/workflows/uat.yml
+++ b/.github/workflows/uat.yml
@@ -31,16 +31,7 @@ jobs:
       - name: Mock Sonar scan (UAT)
         run: |
           echo "[MOCK] SonarQube scan skipped on UAT (no secrets)"
-      - name: Optional real Sonar scan (if secrets present)
-        if: ${{ secrets.SONAR_TOKEN != '' && secrets.SONAR_HOST_URL != '' && secrets.SONAR_PROJECT_KEY != '' }}
-        uses: sonarsource/sonarqube-scan-action@v3.0.0
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-        with:
-          args: >-
-            -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }}
-            -Dsonar.projectName=smart-feedback-service
+      # Optional real Sonar scan removed in mock mode
 
   build_and_push:
     runs-on: ubuntu-latest
