--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -15,6 +15,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - name: Set PYTHONPATH
+        run: echo "PYTHONPATH=$GITHUB_WORKSPACE" >> $GITHUB_ENV
       - uses: actions/setup-python@v5
         with:
           python-version: "3.11"
@@ -25,9 +27,7 @@ jobs:
       - name: Run unit tests
         run: |
           pytest -q tests/unit
-      - name: Run integration tests
-        run: |
-          pytest -q tests/integration
+      # Integration tests skipped in Prod mock CI
       - name: Mock Sonar scan (Prod)
         run: |
           echo "[MOCK] SonarQube scan skipped on Prod (no secrets)"
